--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,11 +19,11 @@ jobs:
       - name: Verify Gradle Wrapper
         uses: gradle/wrapper-validation-action@v1
       - name: Execute build
-        run: ./gradlew --info --stacktrace build
+        run: sudo ./gradlew --info --stacktrace build
       - name: Execute jlink
-        run: ./gradlew --info --stacktrace jlink
+        run: sudo ./gradlew --info --stacktrace jlink
       - name: Execute jpackage
-        run: ./gradlew --info --stacktrace jpackage
+        run: sudo ./gradlew --info --stacktrace jpackage
       - name: Upload DEB as an artifact
         uses: actions/upload-artifact@v2
         with:
