--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,23 +9,35 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Git checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+
       - name: Set up JDK
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
+          distribution: 'zulu'
           java-version: 17
+
       - name: Echo JAVA_HOME
         run: echo $JAVA_HOME
+
       - name: Verify Gradle Wrapper
-        uses: gradle/wrapper-validation-action@v1
+        uses: gradle/wrapper-validation-action@v2
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+
       - name: Make gradlew executable
         run: chmod +x ./gradlew
+
       - name: Execute build
         run: ./gradlew --info --stacktrace build
+
       - name: Execute jlink
         run: ./gradlew --info --stacktrace jlink
+
       - name: Execute jpackage
         run: ./gradlew --info --stacktrace jpackage
+
       - name: Upload DEB as an artifact
         uses: actions/upload-artifact@v2
         with:
