--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 subprojects {
     apply plugin: 'java'
     java.toolchain.languageVersion = JavaLanguageVersion.of(17)
-    archivesBaseName = "${archive_base_name}"
+//    archivesBaseName = "${archive_base_name}"
 
     tasks.withType(JavaCompile).configureEach {
         it.options.encoding = 'UTF-8'
