--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,14 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+
+
+####CDK
+*.js
+!jest.config.js
+*.d.ts
+node_modules
+
+# CDK asset staging directory
+.cdk.staging
+cdk.out
