--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -15,8 +15,17 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+//    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+
+//  DATABASE ACCESS
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    runtimeOnly 'org.postgresql:postgresql'
+
+//    TESTING
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 //    testImplementation platform('org.junit:junit-bom:5.9.1')
 //    testImplementation 'org.junit.jupiter:junit-jupiter'
 }
