--- a/cli/build.gradle
+++ b/cli/build.gradle
@@ -4,15 +4,14 @@ plugins {
     id 'org.beryx.jlink' version '2.24.1'
 }
 
-group = 'net.ryan'
-version = '1.0.0'
+group = group_name
+version = client_version
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation 'com.google.code.gson:gson:2.10.1'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
