--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
 #Increase the ram usage of gradlew
 org.gradle.jvmargs=-Xmx3G
 archive_base_name=beanpedia
-group=net.ryan
+group_name=net.ryan
+client_version=0.1.0
+server_version=0.1.0
