--- a/.github/workflows/DeployJAR.yml
+++ b/.github/workflows/DeployJAR.yml
@@ -1,8 +1,11 @@
 name: Deploy API JAR
 
 on:
-  workflow_dispatch
-
+  push:
+    branches:
+      - master
+  workflow_dispatch:
+    
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -23,11 +26,17 @@ jobs:
         with:
           java-version: '21'
           distribution: 'corretto'
+          
 
-      - name: Build Backend API JAR and Echo Message
+      - name: Run Tests
         run: |
+          echo Testing
+
+      - name: Build Backend API JAR
+        run: |
+          chmod +x ./gradlew
           ./gradlew :backend:build
-          echo "YES"
+          
 
       - name: Get secrets from AWS Secrets Manager
         uses: aws-actions/aws-secretsmanager-get-secrets@v2.0.1
@@ -35,9 +44,22 @@ jobs:
           secret-ids: SM, ${{ vars.AWS_SECRET_NAME_API }}
           parse-json-secrets: true
 
-      - name: Fetch Parameter from SSM Parameter Store
+      - name: Fetch Parameter from AWS Parameter Store
         run: |
-             ${{env.EC2_SSH_PRIVATE_KEY}}=$(aws ssm get-parameter --name  ${{ env.SM_KEYID}} --with-decryption --query "Parameter.Value" --output text)
+            {
+              echo 'EC2_SSH_PRIVATE_KEY<<EOF'
+              aws ssm get-parameter --name '${{ env.SM_KEYID }}' --with-decryption --query 'Parameter.Value' --output text
+              echo EOF
+            } >> "$GITHUB_ENV"
+
+      - name: Stop Old Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ env.SM_INSTANCEIP }}
+          username: "ec2-user"
+          key: ${{ env.EC2_SSH_PRIVATE_KEY }}
+          port: 22
+          script: ~/nuke.sh
 
       - name: Copy JAR to EC2 instance
         uses: appleboy/scp-action@master
@@ -46,6 +68,15 @@ jobs:
           username: "ec2-user"
           key: ${{ env.EC2_SSH_PRIVATE_KEY}}
           port: 22
-          source: "backend/build/libs/backend-1.0-SNAPSHOT.jar"
-          target: "backend-1.0-SNAPSHOT.jar"
-        
+          source: "backend/build/libs/*.jar"
+          target: "~/API/"
+          strip_components: 3
+
+      - name: Start new server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ env.SM_INSTANCEIP }}
+          username: "ec2-user"
+          key: ${{ env.EC2_SSH_PRIVATE_KEY }}
+          port: 22
+          script: nohup java -jar ~/API/*.jar > ~/API/app.log 2>&1 &
