--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port=8080
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/beandb
+spring.datasource.username=admin
+spring.datasource.password=password
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=none
