--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -12,11 +12,14 @@ repositories {
 }
 
 
-
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-//    testImplementation platform('org.junit:junit-bom:5.9.1')
+
+    // Needed for token auth
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server'
+
+// testImplementation platform('org.junit:junit-bom:5.9.1')
 //    testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
