--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -18,9 +18,7 @@ dependencies {
 
     // Needed for token auth
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server'
-
-// testImplementation platform('org.junit:junit-bom:5.9.1')
-//    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.springframework.security:spring-security-test'
 }
 
 test {
