--- a/.github/workflows/DeployJAR.yml
+++ b/.github/workflows/DeployJAR.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
   workflow_dispatch:
-    
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -41,7 +41,9 @@ jobs:
       - name: Get secrets from AWS Secrets Manager
         uses: aws-actions/aws-secretsmanager-get-secrets@v2.0.1
         with:
-          secret-ids: SM, ${{ vars.AWS_SECRET_NAME_API }}
+          secret-ids: | 
+            SM, ${{ vars.AWS_SECRET_NAME_API }}
+            SMDB, ${{ vars.AWS_SECRET_NAME_DB }}
           parse-json-secrets: true
 
       - name: Fetch Parameter from AWS Parameter Store
@@ -79,4 +81,8 @@ jobs:
           username: "ec2-user"
           key: ${{ env.EC2_SSH_PRIVATE_KEY }}
           port: 22
-          script: nohup java -jar ~/API/*.jar > ~/API/app.log 2>&1 &
+          script: |
+            export DATABASE_URL="jdbc:postgresql://${{ env.SMDB_HOST }}:${{ env.SMDB_PORT }}/test"
+            export DATABASE_USERNAME="${{ env.SMDB_USERNAME }}"
+            export DATABASE_PASSWORD="${{ env.SMDB_PASSWORD }}"
+            nohup java -jar ~/API/*.jar > ~/API/app.log 2>&1 & 
