--- a/.github/workflows/DeployScripts.yml
+++ b/.github/workflows/DeployScripts.yml
@@ -1,4 +1,4 @@
-name: Deploy API JAR
+name: Deploy SQL Scripts
 
 on:
   push:
@@ -21,23 +21,6 @@ jobs:
           role-to-assume: ${{ vars.AWS_DEPLOY_ROLE }}
           aws-region: ${{ vars.AWS_REGION }}
 
-      - name: Set up JDK 21
-        uses: actions/setup-java@v3
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-          
-
-      - name: Run Tests
-        run: |
-          echo Testing
-
-      - name: Build Backend API JAR
-        run: |
-          chmod +x ./gradlew
-          ./gradlew :backend:build
-          
-
       - name: Get secrets from AWS Secrets Manager
         uses: aws-actions/aws-secretsmanager-get-secrets@v2.0.1
         with:
@@ -54,27 +37,17 @@ jobs:
               echo EOF
             } >> "$GITHUB_ENV"
 
-      - name: Stop Old Server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ env.SM_INSTANCEIP }}
-          username: "ubuntu"
-          key: ${{ env.EC2_SSH_PRIVATE_KEY }}
-          port: 22
-          script: ~/nuke.sh
-
-      - name: Copy JAR to EC2 instance
+      - name: Copy over SQL scripts & changelog
         uses: appleboy/scp-action@master
         with:
           host: ${{ env.SM_INSTANCEIP }}
           username: "ubuntu"
           key: ${{ env.EC2_SSH_PRIVATE_KEY}}
           port: 22
-          source: "backend/build/libs/*.jar"
-          target: "~/API/"
-          strip_components: 3
+          source: "sql/*.jar,changelog.yaml"
+          target: "~/"
 
-      - name: Start new server
+      - name: Deploy Liquibase Scripts
         uses: appleboy/ssh-action@master
         with:
           host: ${{ env.SM_INSTANCEIP }}
@@ -82,7 +55,9 @@ jobs:
           key: ${{ env.EC2_SSH_PRIVATE_KEY }}
           port: 22
           script: |
-            export DATABASE_URL="jdbc:postgresql://${{ env.SMDB_HOST }}:${{ env.SMDB_PORT }}/test"
-            export DATABASE_USERNAME="${{ env.SMDB_USERNAME }}"
-            export DATABASE_PASSWORD="${{ env.SMDB_PASSWORD }}"
-            nohup java -jar ~/API/*.jar > ~/API/app.log 2>&1 & 
+            echo "changeLogFile= ~/changelog.yaml" >> liquibase.properties
+            echo "url=jdbc:postgresql://${{ env.SMDB_HOST }}:${{ env.SMDB_PORT }}/beandb" >> liquibase.properties
+            echo "username=${{ env.SMDB_USERNAME }}" >> liquibase.properties
+            echo "password=${{ env.SMDB_PASSWORD }}" >> liquibase.properties
+            liquibase update
+
