Update in clientside

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,19 @@
+#server.port=8080
+#
+#spring.datasource.url=jdbc:postgresql://localhost:5432/beandb
+#spring.datasource.username=admin
+#spring.datasource.password=password
+#
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.hibernate.ddl-auto=none
+#
+#rsa.private-key=classpath:certs/private.pem
+#rsa.public-key=classpath:certs/public.pem
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/beandb
-spring.datasource.username=admin
-spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://ep-sweet-meadow-a5jqxbmd.us-east-2.aws.neon.tech/neondb?sslmode=require
+spring.datasource.username=Ryan-Blignaut-BBD
+spring.datasource.password=JW3kOMHAD9nr
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=none
