--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,3 +6,9 @@ server.port=8080
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+rsa.private-key=classpath:certs/private.pem
+rsa.public-key=classpath:certs/public.pem
+#spring.datasource.url=jdbc:postgresql://ep-sweet-meadow-a5jqxbmd.us-east-2.aws.neon.tech/neondb?sslmode=require
+#spring.datasource.username=Ryan-Blignaut-BBD
+#spring.datasource.password=JW3kOMHAD9nr
