--- a/cli/build.gradle
+++ b/cli/build.gradle
@@ -4,6 +4,10 @@ plugins {
     id 'org.beryx.jlink' version '2.24.1'
 }
 
+run {
+    standardInput = System.in
+}
+
 group = 'net.ryan'
 version = '1.0.0'
 
@@ -12,7 +16,6 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.google.code.gson:gson:2.10.1'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
