--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8080
 #spring.datasource.username=${DATABASE_USERNAME}
 #spring.datasource.password=${DATABASE_PASSWORD}
 
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 #spring.jpa.hibernate.naming.s
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL
@@ -12,10 +12,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.jpa.properties.hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-<<<<<<< HEAD
-#spring.jpa.properties.hibernate.implicit_naming_strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
-=======
->>>>>>> 33ff2803f412121d27fa18455766039f03ab1e48
 
 rsa.private-key=classpath:certs/private.pem
 rsa.public-key=classpath:certs/public.pem
