--- a/cli/build.gradle
+++ b/cli/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id 'org.beryx.jlink' version '2.24.1'
 }
 
+sourceCompatibility = '21'
+targetCompatibility = '21'
 group = 'net.ryan'
 version = '1.0.0'
 
@@ -13,8 +15,8 @@ repositories {
 
 dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
 
 test {
