--- a/cli/build.gradle
+++ b/cli/build.gradle
@@ -4,6 +4,9 @@ plugins {
     id 'org.beryx.jlink' version '2.24.1'
 }
 
+sourceCompatibility = '21'
+targetCompatibility = '21'
+
 run {
     standardInput = System.in
 }
@@ -16,6 +19,9 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.google.code.gson:gson:2.10.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
