--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,20 +1,9 @@
 server.port=8080
 
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-#spring.datasource.username=${DATABASE_USERNAME}
-#spring.datasource.password=${DATABASE_PASSWORD}
-
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-#spring.jpa.hibernate.naming.s
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL
-#spring.jpa.properties.hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
-#spring.jpa.properties.hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 rsa.private-key=classpath:certs/private.pem
 rsa.public-key=classpath:certs/public.pem
-#spring.datasource.url=jdbc:postgresql://ep-sweet-meadow-a5jqxbmd.us-east-2.aws.neon.tech/neondb?sslmode=require
-#spring.datasource.username=Ryan-Blignaut-BBD
-#spring.datasource.password=JW3kOMHAD9nr
