--- a/.github/workflows/IntegrationTests.yml
+++ b/.github/workflows/IntegrationTests.yml
@@ -12,6 +12,7 @@ jobs:
           curl -o- "https://dl-cli.pstmn.io/install/linux64.sh" | sh
       - name: Login to Postman CLI
         run: postman login --with-api-key ${{ secrets.POSTMAN_API_KEY }}
+      
       - name: Run API tests
         run: |
-          postman collection run "32590767-b0fb8087-86e3-4e84-9b81-5c5e734c8d1a"
+          postman collection run "32590767-b0fb8087-86e3-4e84-9b81-5c5e734c8d1a" --env-var "AUTH_TOKEN=${{ secrets.POSTMAN_AUTH_TOKEN }}"
